updating the VS Code module to include PATH

--- a/training_materials/0.0.0_module_overview.md
+++ b/training_materials/0.0.0_module_overview.md
@@ -6,25 +6,24 @@
 
 ### Module Time Summary
 
-| Module | Instructor-Led Hours | Student-Led Hours | Total Hours |
-|--------|---------------------|-------------------|-------------|
-| Module 1: DevOps & Infrastructure as Code Foundations | 15.5 | 3 | 18.5 |
-| HACK DAY 1: Device Management Innovation | - | 8 | 8 |
-| Module 2: Jamf Pro Provider & Terraform Syntax | 5 | 8 | 13 |
-| Module 3: Team Collaboration & State Management | 11 | 3.5 | 14.5 |
-| Module 4: Jamf Resource Translation & Terraform Patterns | 36 | 18 | 54 |
-| HACK DAY 2: Tenant Migrations | - | 8 | 8 |
-| Module 5: TF Modules & Reusable Configurations | 18 | 10 | 28 |
-| HACK DAY 3: Optimisation & Custom Solutions | - | 8 | 8 |
-| **TOTAL** | **85.5** | **58.5** | **144** |
+| Module                                                   | Instructor-Led Hours | Student-Led Hours | Total Hours |
+| -------------------------------------------------------- | -------------------- | ----------------- | ----------- |
+| Module 1: DevOps & Infrastructure as Code Foundations    | 15.5                 | 3                 | 18.5        |
+| HACK DAY 1: Device Management Innovation                 | -                    | 8                 | 8           |
+| Module 2: Jamf Pro Provider & Terraform Syntax           | 5                    | 8                 | 13          |
+| Module 3: Team Collaboration & State Management          | 11                   | 3.5               | 14.5        |
+| Module 4: Jamf Resource Translation & Terraform Patterns | 36                   | 18                | 54          |
+| HACK DAY 2: Tenant Migrations                            | -                    | 8                 | 8           |
+| Module 5: TF Modules & Reusable Configurations           | 18                   | 10                | 28          |
+| HACK DAY 3: Optimisation & Custom Solutions              | -                    | 8                 | 8           |
+| **TOTAL**                                                | **85.5**             | **58.5**          | **144**     |
 
 ---
 
-
-
 ## Module 1: DevOps & Infrastructure as Code Foundations
 
-**Learning Outcomes:** 
+**Learning Outcomes:**
+
 - Understand Infrastructure as Code principles and why configuration as code beats click ops
 - Master VS Code as the primary development environment for infrastructure management
 - Gain proficiency in Git fundamentals, GitOps workflows, and collaborative development practices
@@ -36,18 +35,19 @@
 ### Day 1 (Instructor Led)
 
 #### Topic 1.0: Module Overview
+
 - What problems are we solving ?
 - Why config as code meets our needs
 - The shift in the control plane
 - vs code fundamentals
 - git fundamentals
 
-#### Topic 1.1: Infrastructure as Code principles - why config as code beats click ops *(2 hours)*
+#### Topic 1.1: Infrastructure as Code principles - why config as code beats click ops _(2 hours)_
 
 - Why config as code? - [Configuration as Code vs Click-and-Deploy](https://devcenter.upsun.com/posts/why-configuration-as-code-beats-click-and-deploy/)
 - Architecture of the control plane - - TODO
 
-#### Topic 1.2: VS Code fundamentals *(1.5 hours)*
+#### Topic 1.2: VS Code fundamentals _(1.5 hours)_
 
 - What is VS Code?
 - [Visual Studio Code Made Easy For Beginners](https://www.youtube.com/watch?v=bfvq_kTbnd8&t=546s)
@@ -58,43 +58,42 @@
   - indent rainbow
   - codesnap
   - hashicorp terraform
+- **Important:** [Add VS Code to your $PATH](https://code.visualstudio.com/docs/setup/mac#_launch-vs-code-from-the-command-line)
+  - Follow these instructions to add VS Code to your $PATH. This is crucial to follow some of the steps in these modules
 
 #### Support Materials
 
 - [Install VS Code](https://code.visualstudio.com/download)
 - [Official VS Code documentation](https://code.visualstudio.com/docs)
 - [Keyboard shortcuts reference](https://code.visualstudio.com/assets/docs/getstarted/tips-and-tricks/KeyboardReferenceSheet.png)
-- [Tips and tricks](https://code.visualstudio.com/docs/getstarted/tips-and-tricks) 
+- [Tips and tricks](https://code.visualstudio.com/docs/getstarted/tips-and-tricks)
 
-#### Topic 1.3: Git fundamentals for infrastructure management *(3 hours)*
+#### Topic 1.3: Git fundamentals for infrastructure management _(3 hours)_
 
 - watch: [Git Tutorial for Beginners: Learn Git in 1 Hour](https://www.youtube.com/watch?v=8JJ101D3knE)
 - complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner)
 - complete: [Oh My Git](https://ohmygit.org/)
 - complete: [Git Tutorial](https://github.com/deploymenttheory/terraform-training-jamfpro/blob/main/training_materials/1.1.0_git_tutorial.md)
 
-#### Topic 1.4: Git Ops for infrastructure management *(2 hours)*
+#### Topic 1.4: Git Ops for infrastructure management _(2 hours)_
 
 - [What is GitOps, How GitOps works and Why it's so useful](https://www.youtube.com/watch?v=f5EpcWp0THw&t=1s)
 - [Git/GitHub roadmap](https://roadmap.sh/git-github)
 - Branching strategies with GitLab flow
 - Release management with release-please
 
-#### 1/2 Hack Day: Git + Terraform workflow mastery *(3 hours)*
+#### 1/2 Hack Day: Git + Terraform workflow mastery _(3 hours)_
 
 - Complete: [Learn Git Branching](https://learngitbranching.js.org/)
 - Complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner)
 
-### Module 1 Practice (Student-Led): Git + Terraform workflow mastery *(3 hours)*
+### Module 1 Practice (Student-Led): Git + Terraform workflow mastery _(3 hours)_
 
-
-
-#### Hack Day Practice: Git + Terraform workflow mastery *(3 hours)*
-
+#### Hack Day Practice: Git + Terraform workflow mastery _(3 hours)_
 
 ### Day 2 (Instructor Led)
 
-#### Topic 1.4: Terraform core concepts and architecture *(2 hours)*
+#### Topic 1.4: Terraform core concepts and architecture _(2 hours)_
 
 - [Terraform overview](https://www.youtube.com/watch?v=l5k1ai_GBDE)
 - Overview of modular and client-server architecture
@@ -103,17 +102,17 @@
 - Overview of HCL Configuration files (templates)
 - Overview of remote state management with Terraform Cloud
 
-#### Topic 1.5: Provider ecosystem and version constraints *(2 hours)*
+#### Topic 1.5: Provider ecosystem and version constraints _(2 hours)_
 
 - Terraform registry (public vs. private)
 - Provider versioning and alignment to Jamf Pro versions
 - Useful providers within the ecosystem (local, random, time, http, axm)
 
-#### Topic 1.6: Introduction to HCL syntax *(2 hours)*
+#### Topic 1.6: Introduction to HCL syntax _(2 hours)_
 
 - Terraform block types (provider, resource, data, variable, module, output, provisioners)
 
-#### Topic 1.7: Terraform Workflow and state management *(2 hours)*
+#### Topic 1.7: Terraform Workflow and state management _(2 hours)_
 
 - Write
 - Init: `terraform init`
@@ -122,18 +121,17 @@
 - Apply: `terraform apply`
 - Destroy: `terraform destroy`
 
-### Module 1 Practice (Student-Led): Git + Terraform workflow mastery *(3 hours)*
-
+### Module 1 Practice (Student-Led): Git + Terraform workflow mastery _(3 hours)_
 
 This is a student-led practice session where the students will be given a series of tasks to complete.
 
-#### Practice 1.1: VS Code intro videos *(0.5 hours)*
+#### Practice 1.1: VS Code intro videos _(0.5 hours)_
 
 - Watch: [VS Code intro videos](https://code.visualstudio.com/docs/getstarted/introvideos)
 
-#### Practice 1.2: Git commands and workflow mastery *(2 hours)*
+#### Practice 1.2: Git commands and workflow mastery _(2 hours)_
 
-- Complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner) 
+- Complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner)
 
 - Complete: [Learn Git Branching](https://learngitbranching.js.org/)
 
@@ -146,12 +144,12 @@ This is a student-led practice session where the students will be given a series
 - [VS Code Terraform extension](https://marketplace.visualstudio.com/items?itemName=HashiCorp.terraform)
 - [Git Installed](https://git-scm.com/)
 - [GitHub account](https://github.com/)
-**Instructor Led total:** 15.5 hours  
-**Student-Led total:** 3 hours
+  **Instructor Led total:** 15.5 hours  
+  **Student-Led total:** 3 hours
 
 ### Day 2 (Instructor Led)
 
-#### Topic 1.5: Terraform core concepts and architecture *(2 hours)*
+#### Topic 1.5: Terraform core concepts and architecture _(2 hours)_
 
 - [Terraform overview](https://www.youtube.com/watch?v=l5k1ai_GBDE)
 - Overview of modular and client-server architecture
@@ -160,17 +158,17 @@ This is a student-led practice session where the students will be given a series
 - Overview of HCL Configuration files (templates)
 - Overview of remote state management with Terraform Cloud
 
-#### Topic 1.6: Provider ecosystem and version constraints *(2 hours)*
+#### Topic 1.6: Provider ecosystem and version constraints _(2 hours)_
 
 - Terraform registry (public vs. private)
 - Provider versioning and alignment to Jamf Pro versions
 - Useful providers within the ecosystem (local, random, time, http, axm)
 
-#### Topic 1.7: Introduction to HCL syntax *(2 hours)*
+#### Topic 1.7: Introduction to HCL syntax _(2 hours)_
 
 - Terraform block types (provider, resource, data, variable, module, output, provisioners)
 
-#### Topic 1.8: Terraform Workflow and state management *(2 hours)*
+#### Topic 1.8: Terraform Workflow and state management _(2 hours)_
 
 - Write
 - Init: `terraform init`
@@ -179,8 +177,6 @@ This is a student-led practice session where the students will be given a series
 - Apply: `terraform apply`
 - Destroy: `terraform destroy`
 
-
-
 ### HACK DAY 1: Git Foundation and TF Basics
 
 - Half day on Git
@@ -188,22 +184,21 @@ This is a student-led practice session where the students will be given a series
 
 **Duration: 8 hours**
 
-
 ### Module 2: Jamf Pro Provider & Terraform Syntax
 
 **Learning Outcomes:** Translate existing Jamf expertise into Terraform configurations
 
-#### Topic 2.1: Provider configuration options and authentication (OAuth2/Basic) *(1 hour)*
+#### Topic 2.1: Provider configuration options and authentication (OAuth2/Basic) _(1 hour)_
 
 - Load balancer settings, rate limiting (performance considerations)
 
-#### Topic 2.2: Jamf resource syntax patterns in HCL *(1 hour)*
+#### Topic 2.2: Jamf resource syntax patterns in HCL _(1 hour)_
 
-#### Topic 2.3: Resource dependencies and Terraform lifecycle *(1 hour)*
+#### Topic 2.3: Resource dependencies and Terraform lifecycle _(1 hour)_
 
-#### Topic 2.4: Data sources vs resources *(2 hours)*
+#### Topic 2.4: Data sources vs resources _(2 hours)_
 
-#### Hands-on Practice: Convert existing Jamf configurations to Terraform *(8 hours)*
+#### Hands-on Practice: Convert existing Jamf configurations to Terraform _(8 hours)_
 
 **Module Total: 13 hours**
 
@@ -211,47 +206,46 @@ This is a student-led practice session where the students will be given a series
 
 **Learning Outcomes:** Move from individual Jamf admin work to collaborative infrastructure management
 
-#### Topic 3.1: Remote state concepts with Terraform Cloud *(1 hour)*
+#### Topic 3.1: Remote state concepts with Terraform Cloud _(1 hour)_
 
-#### Topic 3.2: Terraform Cloud workspaces and team permissions *(2 hours)*
+#### Topic 3.2: Terraform Cloud workspaces and team permissions _(2 hours)_
 
-#### Topic 3.3: Variable management and secrets handling with HashiVault *(2 hours)*
+#### Topic 3.3: Variable management and secrets handling with HashiVault _(2 hours)_
 
-#### Topic 3.4: VCS integration workflows (Git + Terraform Cloud) *(2 hours)*
+#### Topic 3.4: VCS integration workflows (Git + Terraform Cloud) _(2 hours)_
 
-#### Topic 3.5: Workspace organization and environment separation *(2 hours)*
+#### Topic 3.5: Workspace organization and environment separation _(2 hours)_
 
-#### Topic 3.6: Collaboration patterns and approval workflows *(2 hours)*
+#### Topic 3.6: Collaboration patterns and approval workflows _(2 hours)_
 
-#### Hands-on Practice: Team-based Jamf infrastructure management *(3.5 hours)*
+#### Hands-on Practice: Team-based Jamf infrastructure management _(3.5 hours)_
 
 **Module Total: 14.5 hours**
-
 
 ### Module 4: Jamf Resource Translation & Terraform Patterns
 
 **Learning Outcomes:** Convert Jamf expertise into efficient Terraform configurations
 
-#### Topic 4.1: Policy-as-code patterns (you know policies, learn the syntax) *(5 hours)*
+#### Topic 4.1: Policy-as-code patterns (you know policies, learn the syntax) _(5 hours)_
 
-#### Topic 4.2: Group management with Terraform (smart/static group syntax) *(4 hours)*
+#### Topic 4.2: Group management with Terraform (smart/static group syntax) _(4 hours)_
 
-#### Topic 4.3: Prestage enrollment configurations in code *(4 hours)*
+#### Topic 4.3: Prestage enrollment configurations in code _(4 hours)_
 
-#### Topic 4.4: App deployment automation (VPP, self-service in Terraform) *(5 hours)*
+#### Topic 4.4: App deployment automation (VPP, self-service in Terraform) _(5 hours)_
 
-#### Topic 4.5: Configuration profiles and scoping patterns *(4 hours)*
+#### Topic 4.5: Configuration profiles and scoping patterns _(4 hours)_
 
-#### Topic 4.6: Resource relationships and dependencies *(6 hours)*
+#### Topic 4.6: Resource relationships and dependencies _(6 hours)_
 
-#### Topic 4.7: Advanced Terraform patterns for Jamf scenarios *(8 hours)*
+#### Topic 4.7: Advanced Terraform patterns for Jamf scenarios _(8 hours)_
 
 - Using `for_each` for multiple device groups/policies (more resilient than `count`)
 - Dynamic blocks for complex policy payloads
 - Validation blocks for Jamf resource prerequisites
 - Data transformation for device targeting and scoping
 
-#### Topic 4.8: Level Up Your Terraform and best practices *(4 hours)*
+#### Topic 4.8: Level Up Your Terraform and best practices _(4 hours)_
 
 - `for_each` vs `count` patterns for resilient configurations
 - Dynamic blocks for complex nested configurations
@@ -260,7 +254,7 @@ This is a student-led practice session where the students will be given a series
 - State management with `moved`/`import` blocks
 - Performance optimization techniques
 
-#### Hands-on Practice: Recreate current Jamf setup in Terraform *(18 hours)*
+#### Hands-on Practice: Recreate current Jamf setup in Terraform _(18 hours)_
 
 **Module Total: 54 hours**
 
@@ -270,20 +264,19 @@ This is a student-led practice session where the students will be given a series
 
 **Duration: 8 hours**
 
-
 ### Module 5: TF Modules & Reusable Configurations
 
 **Learning Outcomes:** Advanced concept requiring good understanding of prior modules
 
-#### Topic 5.1: Module concepts and structure for device management *(4 hours)*
+#### Topic 5.1: Module concepts and structure for device management _(4 hours)_
 
-#### Topic 5.2: Creating reusable policy and group modules *(5 hours)*
+#### Topic 5.2: Creating reusable policy and group modules _(5 hours)_
 
-#### Topic 5.3: Module versioning and registry usage *(3 hours)*
+#### Topic 5.3: Module versioning and registry usage _(3 hours)_
 
-#### Topic 5.4: Advanced HCL features (count, for_each, dynamic blocks) *(6 hours)*
+#### Topic 5.4: Advanced HCL features (count, for*each, dynamic blocks) *(6 hours)\_
 
-#### Hands-on Practice: Building and using custom modules *(10 hours)*
+#### Hands-on Practice: Building and using custom modules _(10 hours)_
 
 **Module Total: 28 hours**
 
@@ -291,8 +284,7 @@ This is a student-led practice session where the students will be given a series
 
 **Advanced innovation leveraging full skill set and Go experience**
 
-**Duration: 8 hours**
----
+## **Duration: 8 hours**
 
 Misc links
 [terraform best practices](https://www.terraform-best-practices.com/)
